[jupyter] Run simulation instructions.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -38,6 +38,8 @@
     "- [Steps](#Steps)\n",
     "- [Dataset](#dataset)\n",
     "- [What to measure](#What_to_measure)\n",
+    "- [Hardware Setup](#hardware_setup)\n",
+    "- [Instructions to test](#test_instructions)\n",
     "- [Thinkpad](#thinkpad)\n",
     "- [Launching instructions](#LaunchingInstructions)\n",
     "\n",
@@ -1201,6 +1203,40 @@
     "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "    1. Change the vertical angle of the rays in urdf `sed -i 's/_/_/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "    1. `roslaunch px4 posix_sitl_urdf.launch`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='test_instructions'></a>\n",
+    "# Instructions to test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. New terminal with ros_ws\n",
+    "    1. `docker start garuda_sitl_v2`\n",
+    "    1. `xhost +`\n",
+    "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
+    "    1. `cd /Firmware`\n",
+    "    1. `source /ros_ws/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "1. Setup data scripts\n",
+    "    1. `cp ../architecture/Tools/save_free_mem.bash .`\n",
+    "    1. `chmod a+x save_free_mem.bash`\n",
+    "    1. clean data folder\n",
+    "1. Run in separate terminals\n",
+    "    1. `roslaunch px4 posix_sitl_urdf.launch` @ Firmaware\n",
+    "    1. `save_free_mem.bash` @ src/data\n",
+    "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"` @ Firmware\n",
+    "1. Post process @ data\n",
+    "    1. `mv ram.csv current`\n",
+    "    1. `rm current`"
    ]
   },
   {
