Set ip for quad.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1165,6 +1165,9 @@
     "\t1. `sudo chmod +x install_geographiclib_datasets.sh `\n",
     "\t1. `sudo  ./install_geographiclib_datasets.sh `\n",
     "1. Check hardware\n",
+    "    1. `chmod a+x set_ip.sh`\n",
+    "    1. `./set_ip.sh`\n",
+    "    1. `ping 192.168.0.10`\n",
     "    1. `roscore`\n",
     "    1. `rosrun urg_node urg_node _ip_address:=192.168.0.10`\n",
     "1. Clone repos\n",
