[jupyter] Some commands for the live quad.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1055,8 +1055,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Check area with a bounding boz for security area --> cannot skew the bounding box :(\n",
-    "- Use cast rays with lower resolution. Might have some correlation issues with cell id\n",
     "- Think of octomap as Voronoi Map. Always using a resolution that guarantees safety. --> in path generation the corridor the quad flies through also needs to be checked."
    ]
   },
@@ -1072,7 +1070,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Lazy theta Star using unknwon cells\n",
     "- Coverage calculation. Decide is an unknow cell is covered if it is unreachable. Decide the waypoint that needs to be visited to gather the information.\n",
     "- Explore the relationship between:\n",
     "    - the size of the vehicle \n",
@@ -1220,6 +1217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Simulation\n",
     "1. New terminal with ros_ws\n",
     "    1. `docker start garuda_sitl_v2`\n",
     "    1. `xhost +`\n",
@@ -1240,6 +1238,19 @@
     "1. Post process @ data\n",
     "    1. `mv ram.csv current`\n",
     "    1. `rm current`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Real\n",
+    "\n",
+    "1. `vim /opt/ros/kinetic/share/mavros/launch/px4_config.yaml`\n",
+    "1. `roslaunch mavros px4.launch`\n",
+    "1. `rostopic echo /tf`\n",
+    "\n",
+    "https://docs.px4.io/en/sensor/rangefinders.html"
    ]
   },
   {
@@ -1291,34 +1302,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### How often are frontier cells selected?\n",
-    "- Everytime the old one is reached? \n",
-    "```\n",
-    "@ gridBenchmark/frontier_node.copp\n",
-    "main()\n",
-    "{\n",
-    "  while(ros::ok())\n",
-    " {\n",
-    "    mapper::Voxel next_frontier_vector3 = findNextFrontier();\n",
-    "    // ROS_WARN_STREAM(\"[Frontier] Next frontier \" << next_frontier_vector3);\n",
-    "    frontier_pose.pose.position.x = next_frontier_vector3.x;\n",
-    "    frontier_pose.pose.position.y = next_frontier_vector3.y;\n",
-    "    frontier_pose.pose.position.z = next_frontier_vector3.z;\n",
-    "    local_pos_pub.publish(frontier_pose);\n",
-    "    // get_frontier_node = false;\n",
-    "    frontier_check_rate.sleep();\n",
-    "    ros::spinOnce();\n",
-    " }\n",
-    "}\n",
-    "```\n",
-    "--> This should be on demand\n",
-    "\n",
-    "##### Is node topic scope ok?\n",
-    "\n",
-    "##### Flying too close to the ground\n",
-    "\n",
-    "##### Need better simulation scenario, check how much ground is there.\n",
-    "\n",
     "##### Octomap cell size vs quad size\n",
     "This particular application can work with coarse maps ==> minimum cell size can be equal or even bigger than quad size. Which usually is not the case for rooms, labs and smaller scale applications.\n",
     "\n",
