[jupyter] Notes on milestones and variations from baseline.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -54,6 +54,8 @@
     "- RAM memory implications\n",
     "- Computation time of paths\n",
     "\n",
+    "[**Milestones**](#Milestones)\n",
+    "\n",
     "**Bibliography**(#References)\n",
     "\n",
     "\n",
@@ -884,7 +886,7 @@
     "![20180417_explorationVol_maneuverVol.png](attachment:20180417_explorationVol_maneuverVol.png)\n",
     "\n",
     "##### Looping nodes:\n",
-    "- Keep a blacklist of unobservable frontiers. Keep it on the frontier node to avoid comms overhead.\n",
+    "- Keep a blacklist of unobservable frontiers. Keep it on the frontier node to avoid comms overhead.  ->   In the end loops were always (so far) a result of other issues. Keep an eye out for how many unobservable frontiers are added.\n",
     "- The loop between frontiers was because of unknown neighbors that were not observable. The immediate problem was solved by only looking for neighbors in positions that are reachable by the sensor (the xy plane). \n",
     "- The existing initialization maneuver is not sufficient to create voxels along all the desired z axis. (will be solved in another branch)\n",
     "\n",
@@ -893,7 +895,19 @@
     "\n",
     "##### Diagonal neighbors\n",
     "- They might be important. But before very that the any angle aspect is well implemented.\n",
-    "![20180420_diagonalPathsAreImportant.png](attachment:20180420_diagonalPathsAreImportant.png)"
+    "![20180420_diagonalPathsAreImportant.png](attachment:20180420_diagonalPathsAreImportant.png)\n",
+    "\n",
+    "##### When voxels are large\n",
+    "When the size of the voxel is so high that the neighbor cannot be sensed from the center the goal is adjusted to be in a position that takes sensor limitations into account. \n",
+    "See the code for details on calculation. calculate_closer_position@frontiers.cpp\n",
+    "\n",
+    "The calculation of the threshold tales into account the angle the sensor is at. `laser_range_xy = std::cos(laser_angle)*laser_range;`\n",
+    "state_manager_node.cpp @ 420\n",
+    "\n",
+    "The xy distance to what is whithin reach is calculated according to sensor angle and range. The frontier generation checks if the frontier can be sensed from the center of the frontier voxel, if this is not the case the generated frontier is adjusted to the sensing range.\n",
+    "\n",
+    "##### Last mile unknown as free\n",
+    "Many times the frontier voxels are surronded by unknown space. These are the frontiers with the most potention for exploration. They are also the riskier positions for navigation as an obstacle might suddendly appear. The solution adopted now is to treat unknown  space as free within the safety margin distance. Code at hasLineOfSight & lazyThetaStar_, ignoreUnknown @ ltStar_lib.cpp"
    ]
   },
   {
@@ -1136,6 +1150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
     "1. Check installed ubuntu version\n",
     "    1. `lsb_release -a`\n",
     "1. Install software\n",
@@ -1338,6 +1353,32 @@
     "### Heuristic to goal's voxel center or just goal?\n",
     "\n",
     "### Line of sight going through explored terrain?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Milestones'></a>\n",
+    "# Milestones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Simulation\n",
+    "    1. Large mostly open space\n",
+    "    1. Maze\n",
+    "    1. Actinia\n",
+    "    1. Atlas\n",
+    "\n",
+    "1. Experimental\n",
+    "    1. Hardware\n",
+    "    1. Autonomous flight + architecture\n",
+    "    1. \\+ Generate mesh\n",
+    "    1. \\+ RTK\n",
+    "    1. Data collection"
    ]
   },
   {
