--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1200,6 +1200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "** Try 1 - Used from ETHz ASL**\n",
     "1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
     "1. Check installed ubuntu version\n",
     "    1. `lsb_release -a`\n",
@@ -1264,7 +1265,119 @@
     "    1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
     "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "    1. Change the vertical angle of the rays in urdf `sed -i 's/_/_/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
-    "    1. `roslaunch px4 posix_sitl_urdf.launch`"
+    "    1. `roslaunch px4 posix_sitl_urdf.launch`\n",
+    "    \n",
+    "1. Ssh  [**Troubleshooting**](https://dev.to/zduey/how-to-set-up-an-ssh-server-on-a-home-computer)\n",
+    "    1. Create (network manager - remember enter instead of add!) with ip 192.168.6.71 255.255.255.0 \n",
+    "    1. Connect to that one\n",
+    "    1. `sudo apt-get autoremove openssh-client`\n",
+    "    1. `sudo apt-get install openssh-client openssh-server`\n",
+    "    1. `ssh catec@192.168.6.70`\n",
+    "    \n",
+    "1. Mavros [port permissions](https://answers.ros.org/question/220319/ros-run-mavros-with-permission-denied/)\n",
+    "    1. `roslaunch mavros apm.launch`\n",
+    "    1. `sudo vim /opt/ros/kinetic/share/mavros/launch/px4.launch`\n",
+    "    1. Change port to appropriate - ttyS2 @ 921600 is the best guess\n",
+    "    1. `roslaunch mavros px4.launch`\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Try 2. Same Firmware for SITL, Pixhawk and UAL. From laptop**\n",
+    "1. Install Ubuntu on Upboard\n",
+    "    1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
+    "    1. Check installed ubuntu version\n",
+    "        1. `lsb_release -a`\n",
+    "    1. Install software\n",
+    "        1. `sudo apt-get update `\n",
+    "        1. `ssh-keygen -t rsa -b 4096 -C \"margaridaCostaFaria@gmail.com\"`\n",
+    "        1. `cat ~/.ssh/id_rsa.pub`\n",
+    "        1. Add to github\n",
+    "        1. `sudo sh -c 'echo \"deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main\" > /etc/apt/sources.list.d/ros-latest.list'`\n",
+    "        1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
+    "        1. `sudo apt-get update`\n",
+    "        1. `sudo apt-get install ros-kinetic-desktop-full`\n",
+    "        1. `sudo rosdep init`\n",
+    "        1. `rosdep update`\n",
+    "        1. `echo \"source /opt/ros/kinetic/setup.bash\" >> ~/.bashrc`\n",
+    "        1. `source ~/.bashrc`\n",
+    "        1. `sudo sh -c 'echo \"deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main\" > /etc/apt/sources.list.d/ros-latest.list'`\n",
+    "        1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
+    "        1. `wget http://packages.ros.org/ros.key -O - | sudo apt-key add - `\n",
+    "        1. `sudo apt-get update `\n",
+    "        1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs`\n",
+    "1. Clone FlyingOctomap folder **@ laptop & upboard**\n",
+    "    1. `git clone git@github.com:margaridaCF/FlyingOctomap_code.git`\n",
+    "    1. `git checkout ____`\n",
+    "    1. `mv FlyingOctomap_code Flying_Octomap_code`\n",
+    "    1. `cd Flying_Octomap_code`\n",
+    "    1. `git clone git@github.com:margaridaCF/laser_to_free_points_cloud.git`\n",
+    "    1. `cd laser_to_free_points_cloud/`\n",
+    "    1. `git checkout free_cloud `\n",
+    "        \n",
+    "1. Build firmware to flash Pixhawk **@ laptop & upboard**\n",
+    "    1. Build \n",
+    "        1. `sudo apt install -y cmake genromfs python-empy catkin_pkg`\n",
+    "        1. `pip uninstall em`\n",
+    "        1. `pip install numpy toml empy`\n",
+    "        1. `sudo usermod -a -G dialout $USER`\n",
+    "        1. `wget https://raw.githubusercontent.com/PX4/Devguide/master/build_scripts/ubuntu_sim_nuttx.sh`\n",
+    "        1. `chmod +x ubuntu_sim_nuttx.sh`\n",
+    "        1. `./ubuntu_sim_nuttx.sh` (this is better inside a folder - didn't test)\n",
+    "        1. `cd ~/src/Firmware`\n",
+    "        1. `git checkout v1.7.3`\n",
+    "        1. `make px4fmu-v2_default`\n",
+    "    1. Flash **laptop connected to Pixhawk** to have gui\n",
+    "        1. `cd /home/mfaria/qgroundcontrol`\n",
+    "        1. `./qgroundcontrol-start.sh`\n",
+    "        1. Build file is ~/src/Firmware/build/px4fmu-v2_default/px4fmu-v2_default.px4\n",
+    "        1. Set parameter Companion\n",
+    "        1. Callibrate\n",
+    "        \n",
+    "1. Run to fly **@ upboard** connected to laptop through ethernet to rocket\n",
+    "    1. \"Edit connections\" on laptop to have static ip 192.168.6.71\n",
+    "    1. `ssh catec@192.168.6.70`\n",
+    "    1. `roslaunch mavros px4.launch`\n",
+    "    \n",
+    "1. Simulation setup **@ laptop**\n",
+    "    2. Build docker image\n",
+    "        1. `cd /home/mfaria/Flying_Octomap_code/_docker`\n",
+    "        1. `docker build -t garuda_pixhawk .` \n",
+    "    3. Launch docker\n",
+    "        1. `xhost +`\n",
+    "        1. `docker run -it --privileged \\\n",
+    "        -v /home/mfaria/src/Firmware:/Firmware:rw \\\n",
+    "        -v /home/mfaria/Flying_Octomap_code:/ros_ws/src:rw \\\n",
+    "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
+    "        -e DISPLAY=:0 \\\n",
+    "        --name=garuda_pixhawk garuda_pixhawk /bin/bash`\n",
+    "        1. exit\n",
+    "        1. `docker start garuda_pixhawk`\n",
+    "        1. `docker exec -u 0 -it garuda_pixhawk bash`\n",
+    "        \n",
+    "    1. Build ros workspace\n",
+    "        1. (First time) Make ros workspace:\n",
+    "            1. `cd /Firmware`\n",
+    "            1. `source /opt/ros/kinetic/setup.bash`\n",
+    "            1. `cd /ros_ws`\n",
+    "            2. `catkin init`\n",
+    "        1. `catkin build` \n",
+    "    1. Build following [px4](https://dev.px4.io/en/simulation/ros_interface.html) instructions - keep terminal\n",
+    "        1. `cd /Firmware`\n",
+    "        1. `make px4fmu-v2_default`\n",
+    "        1. `source /ros_ws/devel/setup.bash`\n",
+    "        1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "        1. `cp /ros_ws/src/architecture/Tools/iris.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `cp /ros_ws/src/architecture/Tools/iris_base.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `cp /ros_ws/src/architecture/launch/posix_sitl_urdf.launch /Firmware/launch/`\n",
+    "        1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "        1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "        1. `roslaunch px4 posix_sitl_urdf.launch`"
    ]
   },
   {
@@ -1327,6 +1440,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Save data to external drive\n",
+    "1. cd to data\n",
+    "1. `sudo chown mfaria: *`\n",
+    "1. remove all : characters from names\n",
+    "1. `cp -R *  /media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/__folder__`\n",
+    "\n",
     "### Run plotly\n",
     "1. Installation\n",
     "    1. `pip install plotly`\n",
@@ -1370,21 +1489,6 @@
     "##### Fast exploration due to flight endurance can be overcome with battery switching\n",
     "\n",
     "##### Put scale into maps!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='LaunchingInstructions'></a>\n",
-    "### Launching Instructions - outdated"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1"
    ]
   },
   {
