--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1317,6 +1317,9 @@
     "    1. `git clone git@github.com:margaridaCF/laser_to_free_points_cloud.git`\n",
     "    1. `cd laser_to_free_points_cloud/`\n",
     "    1. `git checkout free_cloud `\n",
+    "    1. Change paths for folders at Upboard\n",
+    "        1. `sed -i -- 's/\\/ros_ws\\/src\\/data/\\/home\\/catec\\/ros_ws\\/src\\/data/g' ~/ros_ws/src/architecture/src/state_manager_node.cpp`\n",
+    "        1. `find ~/ros_ws/src -type f -exec sed -i 's/\\/ros_ws\\/src\\/data/\\/home\\/catec\\/ros_ws\\/src\\/data/g' {} +`\n",
     "        \n",
     "1. Build firmware to flash Pixhawk **@ laptop & upboard**\n",
     "    1. Build \n",
@@ -1339,8 +1342,9 @@
     "        \n",
     "1. Run to fly **@ upboard** connected to laptop through ethernet to rocket\n",
     "    1. \"Edit connections\" on laptop to have static ip 192.168.6.71\n",
-    "    1. `ssh catec@192.168.6.70`\n",
-    "    1. `roslaunch mavros px4.launch`\n",
+    "    1. `ssh catec@192.168.6.321`\n",
+    "    1. (test mavros) `roslaunch mavros px4.launch`\n",
+    "    1. (grounded vehicle) `roslaunch architecture realUav_onGround.launch`\n",
     "    \n",
     "1. Simulation setup **@ laptop**\n",
     "    2. Build docker image\n",
@@ -1367,7 +1371,11 @@
     "        1. `catkin build` \n",
     "    1. Build following [px4](https://dev.px4.io/en/simulation/ros_interface.html) instructions - keep terminal\n",
     "        1. `cd /Firmware`\n",
-    "        1. `make px4fmu-v2_default`\n",
+    "        1. `wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh`\n",
+    "        1. `chmod +x install_geographiclib_datasets.sh`\n",
+    "        1. `./install_geographiclib_datasets.sh `\n",
+    "        1. `make posix_sitl_default gazebo`\n",
+    "        1. Kill process (this was just for the make part, they apperantly complicated the toolchain at px4)\n",
     "        1. `source /ros_ws/devel/setup.bash`\n",
     "        1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
     "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
@@ -1377,7 +1385,18 @@
     "        1. `cp /ros_ws/src/architecture/launch/posix_sitl_urdf.launch /Firmware/launch/`\n",
     "        1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
     "        1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
-    "        1. `roslaunch px4 posix_sitl_urdf.launch`"
+    "        1. `roslaunch px4 posix_sitl_urdf.launch`\n",
+    "        \n",
+    "1. New terminal with ros_ws\n",
+    "    1. `docker start garuda_sitl_v2`\n",
+    "    1. `xhost +`\n",
+    "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
+    "    1. `cd /Firmware`\n",
+    "    1. `source /ros_ws/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "1. Launch mavros node `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`"
    ]
   },
   {
