--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1200,7 +1200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Try 1 - Used from ETHz ASL**\n",
+    "##### Try 1 - Used from ETHz ASL\n",
     "1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
     "1. Check installed ubuntu version\n",
     "    1. `lsb_release -a`\n",
@@ -1286,7 +1286,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Try 2. Same Firmware for SITL, Pixhawk and UAL. From laptop**\n",
+    "###### Try 2. Same Firmware for SITL, Pixhawk and UAL. From laptop\n",
+    "** Installation **\n",
     "1. Install Ubuntu on Upboard\n",
     "    1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
     "    1. Check installed ubuntu version\n",
@@ -1386,8 +1387,15 @@
     "        1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
     "        1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "        1. `roslaunch px4 posix_sitl_urdf.launch`\n",
-    "        \n",
-    "1. New terminal with ros_ws\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Run **\n",
+    "1. Simulation\n",
     "    1. `docker start garuda_sitl_v2`\n",
     "    1. `xhost +`\n",
     "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
@@ -1396,7 +1404,14 @@
     "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
     "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
     "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
-    "1. Launch mavros node `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`"
+    "    1. `roslaunch px4 posix_sitl_urdf.launch`\n",
+    "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`\n",
+    "1. Grounded UAV\n",
+    "    1. `ssh catec@192.168.6.321`\n",
+    "    1. `cd /row_ws`\n",
+    "    1. `source devel/setup.bash`\n",
+    "    1. `roslaunch architecture realUav_onGround.launch`\n",
+    "1. Fly"
    ]
   },
   {
