[jupyter] Setup updates.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -40,6 +40,8 @@
     "- [Dataset](#dataset)\n",
     "- [What to measure](#What_to_measure)\n",
     "- [Hardware Setup](#hardware_setup)\n",
+    "    - [Try 1 - ASL](#try1_asl)\n",
+    "    - [Try 2 - CATEC](#try2_catec)\n",
     "- [Instructions to test](#test_instructions)\n",
     "- [Thinkpad](#thinkpad)\n",
     "- [Launching instructions](#LaunchingInstructions)\n",
@@ -1200,6 +1202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='try1_asl'></a>\n",
     "##### Try 1 - Used from ETHz ASL\n",
     "1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
     "1. Check installed ubuntu version\n",
@@ -1286,9 +1289,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='try2_catec'></a>\n",
     "###### Try 2. Same Firmware for SITL, Pixhawk and UAL. From laptop\n",
     "** Installation **\n",
-    "1. Install Ubuntu on Upboard\n",
+    "1. Install ros on ground station pc\n",
+    "    1. `sudo apt-get install -y apt-transport-https ca-certificates curl  software-properties-common`\n",
+    "    1. `sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 0DF731E45CE24F27EEEB1450EFDC8610341D9410`\n",
+    "    1. `wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -\n",
+    "echo \"deb https://download.sublimetext.com/ apt/stable/\" | sudo tee /etc/apt/sources.list.d/sublime-text.list`\n",
+    "    1. `sudo add-apt-repository ppa:gnome-terminator`\n",
+    "    1. `sudo apt-get update`\n",
+    "    1. `sudo apt-get install -y sublime-text terminator git linux-image-generic linux-generic`\n",
+    "    1. `sudo apt-get -f install`\n",
+    "    1. `ssh-keygen -t rsa -b 4096 -C \"margaridaCostaFaria@gmail.com\"`\n",
+    "    1. `cat .ssh/id_rsa.pub`\n",
+    "    1. `cd ~`\n",
+    "    1. install Anaconda https://www.anaconda.com/download/#linux\n",
+    "    1. `bash ~/Downloads/Anaconda2-5.1.0-Linux-x86_64.sh`\n",
+    "    1. `curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -`\n",
+    "    1. `sudo add-apt-repository \\`\n",
+    "    1. `\"deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable`\n",
+    "    1. `$(lsb_release -cs) \\stable\"`\n",
+    "    1. `sudo apt-get update`\n",
+    "    1. `sudo apt-get install docker-ce`\n",
+    "    1. `sudo usermod -a -G docker $USER`\n",
+    "    1. (need to log out after this)\n",
+    "1. Install Ubuntu on Upboard and Ground station\n",
     "    1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
     "    1. Check installed ubuntu version\n",
     "        1. `lsb_release -a`\n",
@@ -1309,7 +1335,15 @@
     "        1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
     "        1. `wget http://packages.ros.org/ros.key -O - | sudo apt-key add - `\n",
     "        1. `sudo apt-get update `\n",
-    "        1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs`\n",
+    "1. **Upboard **\n",
+    "    1. Auto login\n",
+    "    1. Add at the top of bashrc source /opt/ros/kinetic/setup.bash and source ~/.bashrc\n",
+    "    1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs`\n",
+    "1. **Ground station **\n",
+    "    1. `sudo apt-get install -y ros-kinetic-node-manager-fkie`\n",
+    "    1. `pip install catkin_pkg`\n",
+    "    1. `pip uninstall em`\n",
+    "    1. `pip install empy`\n",
     "1. Clone FlyingOctomap folder **@ laptop & upboard**\n",
     "    1. `git clone git@github.com:margaridaCF/FlyingOctomap_code.git`\n",
     "    1. `git checkout ____`\n",
@@ -1330,7 +1364,7 @@
     "        1. `sudo usermod -a -G dialout $USER`\n",
     "        1. `wget https://raw.githubusercontent.com/PX4/Devguide/master/build_scripts/ubuntu_sim_nuttx.sh`\n",
     "        1. `chmod +x ubuntu_sim_nuttx.sh`\n",
-    "        1. `./ubuntu_sim_nuttx.sh` (this is better inside a folder - didn't test)\n",
+    "        1. `./ubuntu_sim_nuttx.sh` \n",
     "        1. `cd ~/src/Firmware`\n",
     "        1. `git checkout v1.7.3`\n",
     "        1. `make px4fmu-v2_default`\n",
@@ -1349,13 +1383,13 @@
     "    \n",
     "1. Simulation setup **@ laptop**\n",
     "    2. Build docker image\n",
-    "        1. `cd /home/mfaria/Flying_Octomap_code/_docker`\n",
+    "        1. `cd ~/Flying_Octomap_code/src/_docker`\n",
     "        1. `docker build -t garuda_pixhawk .` \n",
     "    3. Launch docker\n",
     "        1. `xhost +`\n",
     "        1. `docker run -it --privileged \\\n",
-    "        -v /home/mfaria/src/Firmware:/Firmware:rw \\\n",
-    "        -v /home/mfaria/Flying_Octomap_code:/ros_ws/src:rw \\\n",
+    "        -v ~/Firmware:/Firmware:rw \\\n",
+    "        -v ~/Flying_Octomap_code/src:/ros_ws/src:rw \\\n",
     "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
     "        -e DISPLAY=:0 \\\n",
     "        --name=garuda_pixhawk garuda_pixhawk /bin/bash`\n",
@@ -1396,9 +1430,9 @@
    "source": [
     "** Run **\n",
     "1. Simulation\n",
-    "    1. `docker start garuda_sitl_v2`\n",
+    "    1. `docker start garuda_pixhawk`\n",
     "    1. `xhost +`\n",
-    "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
+    "    1. `docker exec -u 0 -it garuda_pixhawk bash`\n",
     "    1. `cd /Firmware`\n",
     "    1. `source /ros_ws/devel/setup.bash`\n",
     "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
@@ -1656,7 +1690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
