[jupyter] Add to instructions missing packaged to install into ground station.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1344,6 +1344,8 @@
     "    1. `pip install catkin_pkg`\n",
     "    1. `pip uninstall em`\n",
     "    1. `pip install empy`\n",
+    "    1. `pip install plotly`\n",
+    "    1. `pip install cufflinks`\n",
     "1. Clone FlyingOctomap folder **@ laptop & upboard**\n",
     "    1. `git clone git@github.com:margaridaCF/FlyingOctomap_code.git`\n",
     "    1. `git checkout ____`\n",
