[jupyter] [architecture] rviz, notes, actinia cfg.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1338,7 +1338,7 @@
     "1. **Upboard **\n",
     "    1. Auto login\n",
     "    1. Add at the top of bashrc source /opt/ros/kinetic/setup.bash and source ~/.bashrc\n",
-    "    1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs`\n",
+    "    1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs ros-kinetic-node-manager-fkie ros-kinetic-multimaster-fkie`\n",
     "1. **Ground station **\n",
     "    1. `sudo apt-get install -y ros-kinetic-node-manager-fkie`\n",
     "    1. `pip install catkin_pkg`\n",
@@ -1357,6 +1357,7 @@
     "    1. Change paths for folders at Upboard\n",
     "        1. `sed -i -- 's/\\/ros_ws\\/src\\/data/\\/home\\/catec\\/ros_ws\\/src\\/data/g' ~/ros_ws/src/architecture/src/state_manager_node.cpp`\n",
     "        1. `find ~/ros_ws/src -type f -exec sed -i 's/\\/ros_ws\\/src\\/data/\\/home\\/catec\\/ros_ws\\/src\\/data/g' {} +`\n",
+    "    1. `export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages`\n",
     "        \n",
     "1. Build firmware to flash Pixhawk **@ laptop & upboard**\n",
     "    1. Build \n",
@@ -1430,6 +1431,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "** Network @ CATEC to UAV **\n",
+    "- Laptop through wired network.\n",
+    "- 192.168.6.232 through wired network. (Rocket 2)\n",
+    "- 192.168.6.231 through wireless to 192.168.6.232 (Rocket 1)\n",
+    "- 192.168.6.230 through ethernet to 192.168.6.231 (Upboard)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "** Run **\n",
     "1. Simulation\n",
     "    1. `docker start garuda_pixhawk`\n",
@@ -1447,6 +1459,7 @@
     "    1. `cd /row_ws`\n",
     "    1. `source devel/setup.bash`\n",
     "    1. `roslaunch architecture realUav_onGround.launch`\n",
+    "    1. `export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages` \n",
     "1. Fly"
    ]
   },
