[jupyter] Installation instructions.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1335,17 +1335,17 @@
     "        1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
     "        1. `wget http://packages.ros.org/ros.key -O - | sudo apt-key add - `\n",
     "        1. `sudo apt-get update `\n",
+    "        1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs ros-kinetic-node-manager-fkie ros-kinetic-multimaster-fkie`\n",
     "1. **Upboard **\n",
     "    1. Auto login\n",
     "    1. Add at the top of bashrc source /opt/ros/kinetic/setup.bash and source ~/.bashrc\n",
-    "    1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs`\n",
     "1. **Ground station **\n",
-    "    1. `sudo apt-get install -y ros-kinetic-node-manager-fkie`\n",
     "    1. `pip install catkin_pkg`\n",
     "    1. `pip uninstall em`\n",
     "    1. `pip install empy`\n",
     "    1. `pip install plotly`\n",
     "    1. `pip install cufflinks`\n",
+    "    1. Add host name & ip to /etc/hosts in Ground Station. This is the first lookup done before resorting to DNS, so it knowns the ip corresponding to hostname, since the node manager runs the ssh command with hostname instead of ip `192.168.6.231   catec-UP-CHT01`\n",
     "1. Clone FlyingOctomap folder **@ laptop & upboard**\n",
     "    1. `git clone git@github.com:margaridaCF/FlyingOctomap_code.git`\n",
     "    1. `git checkout ____`\n",
