[jupyter] launch roscore remotely.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1447,7 +1447,15 @@
     "    1. `cd /row_ws`\n",
     "    1. `source devel/setup.bash`\n",
     "    1. `roslaunch architecture realUav_onGround.launch`\n",
-    "1. Fly"
+    "1. Fly\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. On ground station `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "1. On UAV `roscore`\n",
+    "1. On UAV `roslaunch mavros px4.launch`\n",
+    "1. On ground station `rviz`"
    ]
   },
   {
