--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1483,6 +1483,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='hil'></a>\n",
+    "### Hardware in the Loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This applies after experimental testing setup is available and running. instructions (except docker) [here](#try2_catec)\n",
+    "\n",
+    "###### Try 1 - Docker + laptop + UAV\n",
+    "- **Docker** px4 simulation. Direct the mavros stream to UAV with distributed ros\n",
+    "- **UAV** UpBoard. The point is to understand the processing power of UpBoard. Run the nodes peveloped here.\n",
+    "- **Laptop** monitoring & recording bag. It will do the same as in the field (rviz & bag recording) \n",
+    "\n",
+    "1. Simulation setup **@ laptop**\n",
+    "    2. Build docker image\n",
+    "        1. `cd ~/Flying_Octomap_code/src/_docker`\n",
+    "        1. `docker build -t garuda_pixhawk .` \n",
+    "    3. Launch docker\n",
+    "        1. `xhost +`\n",
+    "        1. :( `docker network create --subnet=192.168.6.0/24 rocketUAVnet`\n",
+    "        1. `docker run -it --privileged \\\n",
+    "        -v ~/Firmware:/Firmware:rw \\\n",
+    "        -v ~/Flying_Octomap_code/src:/ros_ws/src:rw \\\n",
+    "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
+    "        -e DISPLAY=:0 \\\n",
+    "        --network=\"host\" \\\n",
+    "        --name=garuda_pixhawk_hil garuda_pixhawk /bin/bash`\n",
+    "        1. exit\n",
+    "        1. `docker start garuda_pixhawk_hil`\n",
+    "        1. `docker exec -u 0 -it garuda_pixhawk_hil bash`\n",
+    "        \n",
+    "    1. Build ros workspace\n",
+    "        1. (First time) Make ros workspace:\n",
+    "            1. `cd /Firmware`\n",
+    "            1. `source /opt/ros/kinetic/setup.bash`\n",
+    "            1. `cd /ros_ws`\n",
+    "            2. `catkin init`\n",
+    "        1. `catkin build` \n",
+    "    1. Build following [px4](https://dev.px4.io/en/simulation/ros_interface.html) instructions - keep terminal\n",
+    "        1. `cd /Firmware`\n",
+    "        1. `wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh`\n",
+    "        1. `chmod +x install_geographiclib_datasets.sh`\n",
+    "        1. `./install_geographiclib_datasets.sh `\n",
+    "        1. `make posix_sitl_default gazebo`\n",
+    "        1. Kill process (this was just for the make part, they apperantly complicated the toolchain at px4)\n",
+    "        1. `source /ros_ws/devel/setup.bash`\n",
+    "        1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "        1. `cp /ros_ws/src/architecture/Tools/iris.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `cp /ros_ws/src/architecture/Tools/iris_base.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `cp /ros_ws/src/architecture/launch/posix_sitl_urdf.launch /Firmware/launch/`\n",
+    "        1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "        1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "        1. `roslaunch px4 posix_sitl_urdf.launch`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='test_instructions'></a>\n",
     "# Instructions to test"
    ]
