--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1452,8 +1452,14 @@
     "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
     "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
     "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris_base.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/launch/posix_sitl_urdf.launch /Firmware/launch/`\n",
+    "    1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "    1. `roslaunch px4 posix_sitl_urdf.launch`\n",
-    "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`\n",
+    "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`    \n",
+    "    \n",
     "1. Grounded UAV\n",
     "    1. `ssh catec@192.168.6.321`\n",
     "    1. `cd /row_ws`\n",
@@ -1502,8 +1508,6 @@
     "    2. Build docker image\n",
     "        1. `cd ~/Flying_Octomap_code/src/_docker`\n",
     "        1. `docker build -t garuda_pixhawk .` \n",
-    "    3. Launch docker\n",
-    "        1. `xhost +`\n",
     "        1. :( `docker network create --subnet=192.168.6.0/24 rocketUAVnet`\n",
     "        1. `docker run -it --privileged \\\n",
     "        -v ~/Firmware:/Firmware:rw \\\n",
@@ -1512,19 +1516,23 @@
     "        -e DISPLAY=:0 \\\n",
     "        --network=\"host\" \\\n",
     "        --name=garuda_pixhawk_hil garuda_pixhawk /bin/bash`\n",
+    "    3. Launch docker\n",
+    "        1. `xhost +`\n",
     "        1. exit\n",
     "        1. `docker start garuda_pixhawk_hil`\n",
     "        1. `docker exec -u 0 -it garuda_pixhawk_hil bash`\n",
     "        \n",
-    "    1. Build ros workspace\n",
-    "        1. (First time) Make ros workspace:\n",
-    "            1. `cd /Firmware`\n",
-    "            1. `source /opt/ros/kinetic/setup.bash`\n",
-    "            1. `cd /ros_ws`\n",
-    "            2. `catkin init`\n",
-    "        1. `catkin build` \n",
-    "    1. Build following [px4](https://dev.px4.io/en/simulation/ros_interface.html) instructions - keep terminal\n",
+    "    1. Build px4 simulation\n",
+    "        1. Build ros workspace\n",
+    "            1. (First time) Make ros workspace:\n",
+    "                1. `source /opt/ros/kinetic/setup.bash`\n",
+    "                1. `cd /ros_ws`\n",
+    "                1. `git status`\n",
+    "                1. `git checkout hil`\n",
+    "                2. `catkin init`\n",
+    "            1. `catkin build` \n",
     "        1. `cd /Firmware`\n",
+    "        1. `source /opt/ros/kinetic/setup.bash`\n",
     "        1. `wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh`\n",
     "        1. `chmod +x install_geographiclib_datasets.sh`\n",
     "        1. `./install_geographiclib_datasets.sh `\n",
@@ -1539,7 +1547,20 @@
     "        1. `cp /ros_ws/src/architecture/launch/posix_sitl_urdf.launch /Firmware/launch/`\n",
     "        1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
     "        1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
-    "        1. `roslaunch px4 posix_sitl_urdf.launch`"
+    "        1. `export ROS_IP=192.168.6.77`\n",
+    "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "    1. Launch px4 simulation\n",
+    "        1. **UAV** `roscore`\n",
+    "        1. **docker** `cd /Firmware`\n",
+    "        1. `source /opt/ros/kinetic/setup.bash`\n",
+    "        1. `source /ros_ws/devel/setup.bash`\n",
+    "        1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "        1. `export ROS_IP=192.168.6.77`\n",
+    "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "        1. `roslaunch px4 posix_sitl_urdf.launch`\n",
+    "        1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`    "
    ]
   },
   {
