[jupyter] HitL instructions and parameter interaction considerations.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1505,7 +1505,7 @@
     "- **Laptop** monitoring & recording bag. It will do the same as in the field (rviz & bag recording) \n",
     "\n",
     "1. Simulation setup **@ laptop**\n",
-    "    2. Build docker image\n",
+    "    2. **Laptop** Build docker image\n",
     "        1. `cd ~/Flying_Octomap_code/src/_docker`\n",
     "        1. `docker build -t garuda_pixhawk .` \n",
     "        1. :( `docker network create --subnet=192.168.6.0/24 rocketUAVnet`\n",
@@ -1516,13 +1516,13 @@
     "        -e DISPLAY=:0 \\\n",
     "        --network=\"host\" \\\n",
     "        --name=garuda_pixhawk_hil garuda_pixhawk /bin/bash`\n",
-    "    3. Launch docker\n",
+    "    3. **Laptop** Launch docker\n",
     "        1. `xhost +`\n",
     "        1. exit\n",
     "        1. `docker start garuda_pixhawk_hil`\n",
     "        1. `docker exec -u 0 -it garuda_pixhawk_hil bash`\n",
     "        \n",
-    "    1. Build px4 simulation\n",
+    "    1. **Docker** Build px4 simulation\n",
     "        1. Build ros workspace\n",
     "            1. (First time) Make ros workspace:\n",
     "                1. `source /opt/ros/kinetic/setup.bash`\n",
@@ -1550,8 +1550,8 @@
     "        1. `export ROS_IP=192.168.6.77`\n",
     "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
     "    1. Launch px4 simulation\n",
-    "        1. **UAV** `roscore`\n",
-    "        1. **docker** `cd /Firmware`\n",
+    "        1. **UpBoard** `export ROS_IP=192.168.6.231 & roslaunch px4 posix_hitl_upboard.launch`\n",
+    "        1. **Docker** `cd /Firmware`\n",
     "        1. `source /opt/ros/kinetic/setup.bash`\n",
     "        1. `source /ros_ws/devel/setup.bash`\n",
     "        1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
@@ -1559,8 +1559,8 @@
     "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
     "        1. `export ROS_IP=192.168.6.77`\n",
     "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
-    "        1. `roslaunch px4 posix_sitl_urdf.launch`\n",
-    "        1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`    "
+    "        1. `roslaunch px4 posix_hitl_docker.launch`\n",
+    "        1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  "
    ]
   },
   {
@@ -1669,9 +1669,48 @@
     "##### Octomap cell size vs quad size\n",
     "This particular application can work with coarse maps ==> minimum cell size can be equal or even bigger than quad size. Which usually is not the case for rooms, labs and smaller scale applications.\n",
     "\n",
+    "##### Yaw rate vs octomap resolution vs laser range\n",
+    "\n",
+    "##### Laser range vs minimum distances from goal vs loiter range\n",
+    "The minimum distance from current position of a goal right now is only related to the acceptance range of px4. The minimum laser range must also be taken into account.\n",
+    "Use the same setting both for filtering out the propellers at point cloud level and meetsOperationalRequirements in frontier lib.\n",
+    "\n",
     "##### Fast exploration due to flight endurance can be overcome with battery switching\n",
     "\n",
     "##### Put scale into maps!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Laser range vs laser tilt vs xy reach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10m range = 6.42787323184\n",
+      "15m range = 9.64180984776\n",
+      "20m range = 12.8557464637\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "laser_range = 15\n",
+    "laser_tilt = 0.872665\n",
+    "xy_reach = laser_range*math.cos(laser_tilt)\n",
+    "\n",
+    "print \"10m range = \" + str(10*math.cos(laser_tilt))\n",
+    "print \"15m range = \" + str(xy_reach)\n",
+    "print \"20m range = \" + str(20*math.cos(laser_tilt))"
    ]
   },
   {
