[architecture] Communicating with Upboard HITL.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -42,6 +42,7 @@
     "- [Hardware Setup](#hardware_setup)\n",
     "    - [Try 1 - ASL](#try1_asl)\n",
     "    - [Try 2 - CATEC](#try2_catec)\n",
+    "- [Hardware in the loop](#hitl)\n",
     "- [Instructions to test](#test_instructions)\n",
     "- [Thinkpad](#thinkpad)\n",
     "- [Launching instructions](#LaunchingInstructions)\n",
@@ -1489,7 +1490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='hil'></a>\n",
+    "<a id='hitl'></a>\n",
     "### Hardware in the Loop"
    ]
   },
@@ -1557,6 +1558,71 @@
     "        1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
     "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
     "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "        1. `export ROS_IP=192.168.6.77`\n",
+    "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "        1. `roslaunch px4 posix_hitl_docker.launch`\n",
+    "        1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "###### Try 2 - Laptop + UAV\n",
+    "- **UAV** UpBoard. The point is to understand the processing power of UpBoard. Run the nodes peveloped here.\n",
+    "- **Laptop** \n",
+    "    - monitoring & recording bag. It will do the same as in the field (rviz & bag recording)\n",
+    "    - px4 simulation. Direct the mavros stream to UAV with distributed ros\n",
+    "\n",
+    "1. Simulation setup **@ laptop**\n",
+    "    2. **Laptop** Build docker image\n",
+    "        1. `cd ~/Flying_Octomap_code/src/_docker`\n",
+    "        1. `docker build -t garuda_pixhawk .` \n",
+    "        1. :( `docker network create --subnet=192.168.6.0/24 rocketUAVnet`\n",
+    "        1. `docker run -it --privileged \\\n",
+    "        -v ~/Firmware:/Firmware:rw \\\n",
+    "        -v ~/Flying_Octomap_code/src:/ros_ws/src:rw \\\n",
+    "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
+    "        -e DISPLAY=:0 \\\n",
+    "        --network=\"host\" \\\n",
+    "        --name=garuda_pixhawk_hil garuda_pixhawk /bin/bash`\n",
+    "    3. **Laptop** Launch docker\n",
+    "        1. `xhost +`\n",
+    "        1. exit\n",
+    "        1. `docker start garuda_pixhawk_hil`\n",
+    "        1. `docker exec -u 0 -it garuda_pixhawk_hil bash`\n",
+    "                \n",
+    "    1. **Laptop** Build px4 simulation\n",
+    "        1. Build ros workspace\n",
+    "            1. (First time) Make ros workspace:\n",
+    "                1. `source /opt/ros/kinetic/setup.bash`\n",
+    "                1. `cd ~/Flying_Octomap_code/src`\n",
+    "                1. `git status`\n",
+    "                1. `git checkout hil`\n",
+    "                2. `catkin init`\n",
+    "            1. `catkin build` \n",
+    "        1. `cd ~/src/Firmware`\n",
+    "        1. `source /opt/ros/kinetic/setup.bash`\n",
+    "        1. `source ubuntu_sim_ros_gazebo.sh` [link](https://raw.githubusercontent.com/PX4/Devguide/master/build_scripts/ubuntu_sim_ros_gazebo.sh)\n",
+    "        1. `make posix_sitl_default gazebo`\n",
+    "        1. Kill process (this was just for the make part, they apperantly complicated the toolchain at px4)\n",
+    "        1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "        1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo`\n",
+    "        1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris_base.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `python ~/src/Firmware/Tools/sitl_gazebo/scripts/xacro.py -o ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/home/garuda/src/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "        1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "        1. `export ROS_IP=192.168.6.77`\n",
+    "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "        \n",
+    "    1. Launch px4 simulation\n",
+    "\n",
+    "        1. **UpBoard** `export ROS_IP=192.168.6.231 & roslaunch architecture posix_hitl_upboard.launch`\n",
+    "        1. **Laptop** `cd ~/src/Firmware`\n",
+    "        1. `source /opt/ros/kinetic/setup.bash`\n",
+    "        1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "        1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo`\n",
     "        1. `export ROS_IP=192.168.6.77`\n",
     "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
     "        1. `roslaunch px4 posix_hitl_docker.launch`\n",
@@ -1844,7 +1910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
