[jupyter] Fix launch instruction for hitl.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1625,7 +1625,7 @@
     "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo`\n",
     "        1. `export ROS_IP=192.168.6.77`\n",
     "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
-    "        1. `roslaunch px4 posix_hitl_docker.launch`\n",
+    "        1. `roslaunch architecture posix_hitl_docker.launch`\n",
     "        1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  "
    ]
   },
